# Neural_Network_from_scratch_numpy

./: .gitignore  LICENSE  README.md  description.md  pyproject.toml  requirements.txt
src/neonet/: nn.py
src/neural_net/: nn.py  nn.pyx
test/: digits.py  iris.py  mnist.py  wine.py
